--- a/app/src/main/res/layout/number_list_item.xml
+++ b/app/src/main/res/layout/number_list_item.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="3dp">
-
-    <TextView
-        android:id="@+id/tv_number_item"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:fontFamily="monospace"
-        android:textSize="12sp"/>
 
     <ImageView
         android:id="@+id/iv_viewHolderImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40sp"/>
+        android:layout_marginStart="12dp"/>
 
-    <ViewAnimator
-        android:id="@+id/anim"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40sp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginEnd="12dp">
 
-    </ViewAnimator>
+        <TextView
+            android:id="@+id/tv_number_item"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:layout_gravity="top|end"
+            android:fontFamily="monospace"
+            android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tv_viewHolderNumber"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:layout_gravity="bottom|end"
+            android:fontFamily="monospace"
+            android:textColor="#000"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_viewHolderNumber"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:fontFamily="monospace"
-        android:textColor="#000"/>
-
-</FrameLayout>
+</LinearLayout>
