--- a/app/src/main/res/layout/number_list_item.xml
+++ b/app/src/main/res/layout/number_list_item.xml
@@ -9,8 +9,21 @@
     <ImageView
         android:id="@+id/iv_viewHolderImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginStart="12dp"/>
+
+    <!--<WebView-->
+        <!--android:id="@+id/webView_gif"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginStart="12dp">-->
+    <!--</WebView>-->
+
+    <!--<pl.droidsonroids.gif.GifImageView-->
+        <!--android:id="@+id/gifImageView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="12dp"/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
